--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         </activity>
         <activity android:name=".AuthenticationActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".OrdersActivity"></activity>
+        <activity android:name=".FragmentProfile" />
+        <activity android:name=".FragmentOrders"></activity>
     </application>
 
 </manifest>
